tests/reasonfluxcoder_4b_jax_translated_code_v1_run_errors.txt
🛑 Runtime error in: e1_jax.py
WARNING:2025-07-07 09:45:18,816:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e1_jax.py", line 44, in <module>
    params, opt_state = train_step(params, opt_state, X, y)
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e1_jax.py", line 30, in train_step
    grads = grad(loss)(params, X, y)
NameError: name 'grad' is not defined. Did you mean: 'grads'?

🛑 Runtime error in: e2_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e2_jax.py", line 4, in <module>
    import pandas as pd
ModuleNotFoundError: No module named 'pandas'

🛑 Runtime error in: e3_jax.py
Matplotlib is building the font cache; this may take a moment.
WARNING:2025-07-07 09:45:25,398:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e3_jax.py", line 44, in <module>
    opt_init, opt_update = jaxopt.SGD.create(learning_rate=0.01)
NameError: name 'jaxopt' is not defined

🛑 Runtime error in: e4_jax.py
WARNING:2025-07-07 09:45:27,241:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e4_jax.py", line 105, in <module>
    params = train_step(params, X, y)
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e4_jax.py", line 99, in train_step
    params = update_fn(grads, params)
TypeError: 'GradientTransformationExtraArgs' object is not callable

🛑 Runtime error in: e5_jax.py
WARNING:2025-07-07 09:45:28,744:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e5_jax.py", line 16, in <module>
    y = (X[:, 0] + X[:, 1] * 2)[:, jnp.newaxis] + jnp.random.randn(100, 1)  # Non-linear relationship with noise
AttributeError: module 'jax.numpy' has no attribute 'random'

🛑 Runtime error in: e6_jax.py
WARNING:2025-07-07 09:45:29,776:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e6_jax.py", line 10, in <module>
    X = jnp.array([jnp.random.uniform(0, 10) for _ in range(100)])
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e6_jax.py", line 10, in <listcomp>
    X = jnp.array([jnp.random.uniform(0, 10) for _ in range(100)])
AttributeError: module 'jax.numpy' has no attribute 'random'

🛑 Runtime error in: e7_jax.py
WARNING:2025-07-07 09:45:30,253:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/e7_jax.py", line 99, in <module>
    loaded_params = np.load("model.pth")
  File "/home/hungphd/Son/LLM/lib/python3.10/site-packages/numpy/lib/_npyio_impl.py", line 451, in load
    fid = stack.enter_context(open(os.fspath(file), "rb"))
FileNotFoundError: [Errno 2] No such file or directory: 'model.pth'

🛑 Runtime error in: h10_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h10_jax.py", line 8, in <module>
    import jax.example_libraries.manifold as manifold
ModuleNotFoundError: No module named 'jax.example_libraries.manifold'

🛑 Runtime error in: h1_jax.py
WARNING:2025-07-07 09:45:32,085:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h1_jax.py", line 11, in <module>
    y = 2 * X + 3 + jnp.random.randn(100, 1)  # Linear relationship with noise
AttributeError: module 'jax.numpy' has no attribute 'random'

🛑 Runtime error in: h4_jax.py
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h4_jax.py", line 90
    But the user's instruction says to output only the JAX code. So I need to adjust the code to use JAX's `nn` module. However, JAX's `nn` module is not as comprehensive as PyTorch's. So perhaps the user is expecting a JAX version using the `flax` library. But the user didn't mention Flax. Therefore, the code I wrote earlier is incorrect. So I need to correct that.
                                                                                                                                                                                                                                                                                   ^
SyntaxError: unterminated string literal (detected at line 90)

🛑 Runtime error in: h5_jax.py
WARNING:2025-07-07 09:45:33,122:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h5_jax.py", line 71, in <module>
    encoder = Encoder(input_dim, embed_dim, hidden_dim, num_layers)
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h5_jax.py", line 13, in __init__
    self.embedding = jax.nn.embedding(input_dim, embed_dim)
AttributeError: module 'jax.nn' has no attribute 'embedding'

🛑 Runtime error in: h6_jax.py
WARNING:2025-07-07 09:45:33,683:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h6_jax.py", line 70, in <module>
    train_model()
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h6_jax.py", line 41, in train_model
    model = LanguageModel(vocab_size, 64, 128, 2)
TypeError: LanguageModel.__init__() missing 1 required keyword-only argument: 'key'

🛑 Runtime error in: h9_jax.py
WARNING:2025-07-07 09:45:34,827:jax._src.xla_bridge:791: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/h9_jax.py", line 40, in <module>
    for inputs, labels in dataset:
ValueError: too many values to unpack (expected 2)

🛑 Runtime error in: m1_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/m1_jax.py", line 14, in <module>
    X = jnp.linspace(0, 4 * 3.14159, steps=num_samples).reshape(1, -1)
TypeError: linspace() got an unexpected keyword argument 'steps'

🛑 Runtime error in: m2_jax.py
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/m2_jax.py", line 173
    # This is a simplified version for demonstration
IndentationError: expected an indented block after function definition on line 27

🛑 Runtime error in: m3_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/m3_jax.py", line 17, in <module>
    import torchvision
ModuleNotFoundError: No module named 'torchvision'

🛑 Runtime error in: m4_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/m4_jax.py", line 18, in <module>
    ct_images = jnp.random.normal(size=(batch, num_slices, channels, width, height))
AttributeError: module 'jax.numpy' has no attribute 'random'

🛑 Runtime error in: m5_jax.py
Traceback (most recent call last):
  File "/home/hungphd/Son_Google_team/small_LLM_models_pipeline/reasonfluxcoder_4b_jax_translated_code_v1/m5_jax.py", line 15, in <module>
    X = jnp.linspace(0, 4 * 3.14159, steps=num_samples).reshape(1, -1)
TypeError: linspace() got an unexpected keyword argument 'steps'

